--- a/includes/style.css
+++ b/includes/style.css
@@ -1,6 +1,7 @@
 *{margin: 0; padding: 0;}
 
 header {
+    padding-top: 76px;
     display: block;
     margin-left: 122px;
 
@@ -123,6 +124,9 @@ nav ul li a:hover{
     padding-top: 15px;
     position: absolute;
     text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+    margin-left: 29px;
 }
 
 .list {
@@ -142,6 +146,10 @@ nav ul li a:hover{
     display: inline-block;
     padding-right: 30px;
 
+}
+
+.morepad{
+    padding-left: 12px;
 }
 
 /*the footer*/
@@ -189,10 +197,12 @@ footer li a{
     margin-left:125px;
     padding-top:42px;
     margin-bottom: 43px;
-    margin-right: 20px;
     display: inline-block;
 }
 
+section.icon a{
+    padding-right: 10px;
+}
 
 
 
