--- a/exercises/ex4/login/includes/style.css
+++ b/exercises/ex4/login/includes/style.css
@@ -10,11 +10,10 @@ footer {
 }
 
 
-
-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    width: 100vw;
-  }
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
